# semantic-ai-lab

./: README.md  main.py  pyproject.toml  requirements.txt
migration/: 000001_create_table_document.up.sql
notebooks/: 01_embedding_vs_chunking.ipynb  02_rag_pipeline_and_eval.ipynb  03_retrieval_search_and_ranker.ipynb
scripts/: compare_embedding_similarity.py  populate_postgres.py  rag_pipeline.py
src/chunking/: splitter.py
src/embeddings/: encoder.py
src/evaluation/: metrics.py
src/rag/: pipeline.py
src/retrieval/: postgres_retriever.py  ranker.py  search.py
